[gd_scene load_steps=3 format=3 uid="uid://c8j5p0q3yv6xw"]

[ext_resource type="Theme" uid="uid://s6n6onv1nmd5" path="res://resources/themes/quantum_dice_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scenes/ui/settings_menu.gd" id="2_script"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="AudioSettings" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicContainer" type="VBoxContainer" parent="Panel/VBoxContainer/AudioSettings"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer/AudioSettings/MusicContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer/AudioSettings/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicToggle" type="CheckButton" parent="Panel/VBoxContainer/AudioSettings/MusicContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music Enabled"
alignment = 1

[node name="SFXContainer" type="VBoxContainer" parent="Panel/VBoxContainer/AudioSettings"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Panel/VBoxContainer/AudioSettings/SFXContainer"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer/AudioSettings/SFXContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXToggle" type="CheckButton" parent="Panel/VBoxContainer/AudioSettings/SFXContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SFX Enabled"
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PaletteButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Change Palette"

[node name="AmbientSoundButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Ambient Sound"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back" 